unpackaged/main/default/objects/Projet_de_vie__c/Projet_de_vie__c.object-meta.xml
<CustomObject>
    <label>Projet de vie</label>
    <nameField>
        <displayFormat>PV-{00000000}</displayFormat>
        <label>Nom de Projet de vie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projets de vie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>