unpackaged/main/default/objects/Projet_de_vie__c/fields/Date_projet_de_vie__c.field-meta.xml
<CustomField>
    <fullName>Date_projet_de_vie__c</fullName>
    <label>Date projet de vie</label>
    <type>Date</type>
</CustomField>