unpackaged/main/default/objects/Projet_de_vie__c/fields/Projet_de_vie__c.field-meta.xml
<CustomField>
    <fullName>Projet_de_vie__c</fullName>
    <label>Projet de vie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>